# uwbValidation

./: .gitignore  readme.md
C_armgcc_uwb/adc_dac_ddsloop/: .cproject  .project  platform.spr  platform.tcl
C_armgcc_uwb/adc_dac_ddsloop/hw/: psu_init.html  psu_init_gpl.c
C_armgcc_uwb/adc_dac_ddsloop/tempdsa/: psu_init.h  psu_init.html
C_armgcc_uwb/adc_dac_ddsloop/zynqmp_fsbl/: Makefile  psu_init.c
C_armgcc_uwb/adc_dac_ddsloop/zynqmp_pmufw/: Makefile
C_armgcc_uwb/rf_adda_loop/: .cproject  .project  rf_adda_loop.prj
C_armgcc_uwb/rf_adda_loop/src/: chirpParameters.c  chirpParameters.h  main.c  platform_config.h  protocol.c  protocol.h  udp_perf_server.c  udp_perf_server.h
RFSOC/2t2r/: 2t2r.xpr
RFSOC/2t2r_arm/: .analytics
cpp_MinGW_protocol/: CMakeLists.txt  main.cpp
cpp_MinGW_protocol/cp/: chirpParameters.c  chirpParameters.h
cpp_MinGW_protocol/protocol/: protocol.c  protocol.h
cpp_MinGW_protocol/tlv/: tlv.c  tlv.h
go121_hostTestServer/: chirpParameters.go  funcComm.go  funcInter.go  funcRadar.go  go.mod  main.go  protocol.go  response.go  tlv.go
python312_uwbHost/: const.py
python312_uwbHost/gui/: form.ui  funcABC.py  funcComm.py  funcInterference.py  funcRadar.py  lmx.py  regs.py  socketThread.py  tx_bank_calculator.py  uiConfig.py  ui_form.py  widget.py
python312_uwbHost/ref/: frameData.py  socketThread.py  widget.py
python312_uwbHost/util/: freq.py  protocol2vitis.py
pythonMicro_respberryPiPico/: main.py  ssd1306.py
verilog_uwb/ip_repo/: Table.xlsx
verilog_uwb/rf27dr_adda_vivado/: rf27dr_adda_vivado.xpr
(+663 files in other folders)
